bug:101998 - Push buttons in Manage Folder screen are too short to display the label -Default the height to auto for tbButton class.
https://bugzilla.zimbra.com/show_bug.cgi?id=101998

Copied from Perforce
 Change: 559403

--- a/WebRoot/css/zhtml.css
+++ b/WebRoot/css/zhtml.css
@@ -43,7 +43,10 @@ SUBMIT,
 	@FontSize-normal@
 }
 
-
+.tbButton {
+    /* Bug:101998 - ButtonBorder property applies height:100% resulting in cropped button on Chrome/Safari, override it to auto.  */
+    height:auto;
+}
 
 .ZhAppLinks {
 	vertical-align: middle;
